# streampipes

./: .angular-cli.json  .asf.yaml  .babelrc  .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .project  .spignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Chart.yaml  DISCLAIMER-WIP  Dockerfile  Jenkinsfile  LICENSE  LICENSE-binary  NOTICE  NOTICE-binary  README.md  RELEASE_NOTES.md  RELEASE_VALIDATION.md  VULNERABILITY.md  build-docker.sh  bundle.js  bundle.js.map  config_merge.yml  create-client-model.sh  cypress.json  docker-build.sh  docker-compose.yml  docker-compose.yml-generated  docker-compose.yml.old  docker-save.sh  env_template  index.html  install.sh  karma.conf.js  legacy.webpack.js  (+22 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pr-labeler-config.yml  prlabeller.yml  release.yml
WEB-INF/: shiro.ini  web.xml
app/: app.module.js  delme.js
archetypes/: command
asset-model-management/: pom.xml
cli/: .env  .gitignore  .gitlab-ci.yml  README.md  VERSION  sp  sp.m4  streampipes  tmpl_env
compose/: .env  README.md  docker-compose.full.yml  docker-compose.yml
css/: colors.css  loading-bar.min.css  main.css  prism.css  (+3 more)
streampipes-client-python/: .coveragerc  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.py
streampipes-client-python/docs/: index.md
streampipes-client-python/docs/examples/: 1-introduction-to-streampipes-python-client.ipynb  2-extracting-data-from-the-streampipes-data-lake.ipynb  3-getting-live-data-from-the-streampipes-data-stream.ipynb  4-using-online-machine-learning-on-a-streampipes-data-stream.ipynb  4-using-online-maschine-learning-on-a-streampipes-data-stream.ipynb
streampipes-client-python/docs/getting-started/: developing.md  first-steps.md  installation.md  quickstart.md
streampipes-client-python/docs/overrides/: 404.html  main.html
streampipes-client-python/docs/overrides/partials/: footer.html
streampipes-client-python/docs/overrides/partials/integrations/analytics/: matomo.html
streampipes-client-python/docs/scripts/: gen_ref_pages.py
streampipes-client-python/docs/stylesheets/: extra.css
streampipes-client-python/docs/tutorials/: 1-introduction-to-streampipes-python-client.ipynb  2-extracting-data-from-the-streampipes-data-lake.ipynb  3-getting-live-data-from-the-streampipes-data-stream.ipynb  4-using-online-machine-learning-on-a-streampipes-data-stream.ipynb  5-applying-interoperable-machine-learning-in-streampipes.ipynb  6-streampipes-function-output-stream.ipynb  streampipes_function_outputstream.ipynb
streampipes-client-python/overrides/: text.docs
streampipes-client-python/streampipes/: __version__.py  py.typed  test.py
streampipes-client-python/streampipes/client/: __init__.py  client.py  config.py  credential_provider.py
streampipes-client-python/streampipes/endpoint/: __init__.py  endpoint.py  exceptions.py
streampipes-client-python/streampipes/endpoint/api/: __init__.py  data_lake_measure.py  data_stream.py  version.py
streampipes-client-python/streampipes/function_zoo/: river_function.py
streampipes-client-python/streampipes/functions/: function_handler.py  registration.py  streampipes_function.py
streampipes-client-python/streampipes/functions/broker/: __init__.py  broker.py  broker_handler.py  consumer.py  kafka_broker.py  kafka_message_fetcher.py  nats_broker.py  output_collector.py  publisher.py
streampipes-client-python/streampipes/functions/broker/kafka/: kafka_consumer.py  kafka_message_fetcher.py  kafka_publisher.py
streampipes-client-python/streampipes/functions/broker/nats/: nats_consumer.py  nats_publisher.py
streampipes-client-python/streampipes/functions/utils/: async_iter_handler.py  data_stream_context.py  data_stream_generator.py  function_context.py
streampipes-client-python/streampipes/model/: common.py
streampipes-client-python/streampipes/model/container/: __init__.py  data_lake_measures.py  data_streams.py  resource_container.py  versions.py
streampipes-client-python/streampipes/model/resource/: __init__.py  data_lake_measure.py  data_lake_series.py  data_series.py  data_stream.py  exceptions.py  function_definition.py  query_result.py  resource.py  version.py
streampipes-client-python/streampipes_client/: __version__.py
streampipes-client-python/streampipes_client/client/: client.py  client_config.py  credential_provider.py
streampipes-client-python/streampipes_client/endpoint/: __init__.py  data_lake_measure.py  data_stream.py  endpoint.py  exceptions.py  sp_data_stream.py
streampipes-client-python/streampipes_client/endpoint/api/: __init__.py
streampipes-client-python/streampipes_client/function_zoo/: river_function.py
streampipes-client-python/streampipes_client/functions/: function_handler.py  registration.py  streampipes_function.py
streampipes-client-python/streampipes_client/functions/broker/: __init__.py  broker.py  broker_handler.py  nats_broker.py  output_collector.py
streampipes-client-python/streampipes_client/functions/machine_learning/: river_function.py
streampipes-client-python/streampipes_client/functions/utils/: async_iter_handler.py  data_stream_context.py  data_stream_generator.py  function_config.py  function_context.py
streampipes-client-python/streampipes_client/model/: common.py
streampipes-client-python/streampipes_client/model/container/: __init__.py  data_lake_measures.py  data_streams.py  resource_container.py  sp_data_streams.py
streampipes-client-python/streampipes_client/model/resource/: DataLakeSeries.py  __init__.py  data_lake_measure.py  data_lake_series.py  data_stream.py  function_definition.py  resource.py  sp_data_stream.py
streampipes-client-python/tests/client/: test_client.py  test_credential_provider.py  test_data_lake_series.py  test_endpoint.py  test_versions.py
streampipes-client-python/tests/endpoint/: test_data_lake_measure.py
streampipes-client-python/tests/functions/: test_broker.py  test_function_handler.py  test_river_function.py
streampipes-client-python/tests/model/resource/: test_data_stream.py
(+21237 files in other folders)
