[tool.poetry]
name = "streampipes"
version = "0.0.0"  # gets overwritten in CI pipeline
description = "Python library for Apache StreamPipes"
license = "Apache 2.0"
authors = [
    "Apache Software Foundation <dev@streampipes.apache.org>"
]
readme = "README.md"

homepage = "https://streampipes.apache.org/docs/docs/python/latest/"
repository = "https://github.com/apache/streampipes"
documentation = "https://streampipes.apache.org/docs/docs/python/latest/"

keywords = [
    "streampipes",
    "iot",
    "iiot",
    "analytics",
    "stream-processing",
    "apache",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

include = [
    { path = "streampipes/py.typed" }
]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
confluent-kafka = "~2.0"
nats-py = "~2.2"
pandas = "~1.5"
pydantic = "~1.10"
requests = "~2.28"
typing-extensions = "~4.5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
autoflake = "1.7.8"
black = "23.3.0"
blacken-docs = "1.15.0"
interrogate = { version = "1.5.0", extras = ["png"] }
isort = "5.12.0"
mypy = "1.4.0"
ruff = "0.0.280"
pre-commit = "3.3.0"
pytest = "7.4.0"
pytest-cov = "4.1.0"
pyupgrade = "3.8.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mike = { git = "https://github.com/jimporter/mike.git", rev = "872f72def32f588908f8251fe512189e0c41f4e2" }
mkdocs = "1.4.2"
mkdocs-awesome-pages-plugin = "2.9.0"
mkdocs-gen-files = "0.5.0"
mkdocs-jupyter = "0.24.0"
mkdocs-literate-nav = "0.6.0"
mkdocs-material = "9.1.3"
mkdocstrings = { version = "0.22.0", extras = ["python"] }
numpydoc = "1.5.0"
pytkdocs = { version = "0.16.1", extras = ["numpy-style"] }

[tool.poetry.group.stubs]
optional = true

[tool.poetry.group.stubs.dependencies]
pandas-stubs = "2.0.0.230412"
types-Jinja2 = "2.11.9"
types-requests = "2.31.0.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.ruff]
select = ["E", "F", "RUF100"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.8.
target-version = "py38"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
